Fix a grid layout problem in 'story' section. Build up CSS file.

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -248,8 +248,7 @@ body {
   @media only screen and (max-width: 50em) {
     .story__img--1 {
       grid-column: 1 / 5;
-      grid-row: 1 / -1;
-      width: 100%; } }
+      grid-row: 1 / -1; } }
 
 .story__img--2 {
   width: 115%;
@@ -263,7 +262,7 @@ body {
 
 .story__content {
   background-color: #f9f7f6;
-  width: 100%;
+  grid-column: col-start 5 / full-end;
   padding: 6rem 8vw;
   display: grid;
   align-content: center;
@@ -271,7 +270,7 @@ body {
   @media only screen and (max-width: 50em) {
     .story__content {
       grid-column: 1 / -1;
-      grid-row: 5/6; } }
+      grid-row: 5 / 6; } }
 
 .story__text {
   font-size: 1.5rem;
