--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -24,7 +24,6 @@
         @media only screen and (max-width: $bp-medium) {
             grid-column: 1 / 5; 
             grid-row: 1 / -1;
-            width: 100%;
         }
     }
     
@@ -42,7 +41,7 @@
 
     &__content {
         background-color: $color-grey-light-1;
-        width: 100%;
+        grid-column: col-start 5 / full-end;
 
         padding: 6rem 8vw;
 
@@ -59,7 +58,7 @@
 
         @media only screen and (max-width: $bp-medium) {
             grid-column: 1 / -1; 
-            grid-row: 5/6;
+            grid-row: 5 / 6;
         }
     }
 
